# llmops-python-package

./: .pre-commit-config.yaml  LICENCE.txt  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feat-request.md  fix-request.md
.github/actions/setup/: action.yml
.github/workflows/: check.yml  publish.yml
confs/: deployment.yaml  feature_eng.yaml  generate_rag_dataset.yaml  monitoring.yaml  rag_chain_config.yaml
data/datasets/: rag_dataset.csv  rag_dataset.json
serving_endpoint/: Dockerfile  README.md  requirements.txt  server.py
serving_endpoint/ecs/: Makefile  README.md  deploy-image-to-ecs.sh
serving_endpoint/ecs/infra/app/: variable.tf
serving_endpoint/ecs/infra/app/ecs/: main.tf  variable.tf
serving_endpoint/ecs/infra/app/network/: outputs.tf  variable.tf
serving_endpoint/ecs/infra/setup/: main.tf  output.tf
src/llmops_project/io/: vector_db.py
src/llmops_project/models/: chatbot_with_guardrails.py
src/llmops_project/pipelines/deployment/: register_model.py
src/llmops_project/pipelines/feature_engineering/: create_vector_db.py  ingest_documents.py
src/llmops_project/pipelines/monitoring/: generate_rag_dataset.py  post_deploy_eval.py  pre_deploy_eval.py
tasks/: checks.py  cleans.py  commits.py  docs.py  formats.py  installs.py  mlflow.py  packages.py  projects.py  serve.py
tests/: conftest.py
tests/confs/valid/: 0. feature_engineering.yaml  1. deployment.yaml
tests/io/: test_configs.py  test_services.py
tests/pipelines/deployment/: test_deploy_model.py  test_register_model.py
tests/pipelines/feature_engineering/: test_create_vector_db.py  test_ingest_documents.py
tests/pipelines/monitoring/: test_generate_rag_dataset.py  test_pre_deploy_eval.py
