# https://docs.astral.sh/uv/guides/projects/#pyprojecttoml

# PROJECT

[project]
name = "llmops-project"
version = "0.2.0"
description = "LLMOps Package Production Ready template using open source technologies."
repository = "https://github.com/callmesora/llmops-project"
documentation = "https://callmesora.github.io/llmops-project/"
author = ["callmesora"]
readme = "README.md"
license = "MIT"
packages = [{ include = "llmops_project", from = "src" }]
requires-python = ">=3.10,<3.13"

# DEPENDENCIES

dependencies = [
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "llama-index>=0.12.8",
    "mlflow[genai]>=2.19.0",
    "nltk>=3.9.1",
    "setuptools>=75.6.0",
    "transformers>=4.47.1",
    "pypdf2>=3.0.1",
    "defusedxml>=0.7.1",
    "spacy==3.7.0",
    "textstat>=0.7.4",
    "torch>=2.5.1",
    "evaluate>=0.4.3",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pandera>=0.22.1",
    "langchain-aws>=0.2.10",
    "plotly==5.3.1",
    "kaleido==0.2.1",
    "seaborn>=0.13.2",
    "sagemaker>=2.235.2",
    "litserve>=0.2.5",
    "guardrails-ai>=0.1.8",
    "tenacity>=8.2.0,<8.4.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "qdrant-client>=1.12.1",
    "unstructured[pdf]>=0.16.11",
    "libmagic>=1.0",
    "python-magic>=0.4.27",
    "langchain-qdrant>=0.2.0",
    "pytest>=8.3.4",
    "pytest-ordering>=0.6",
    "llama-index-llms-bedrock>=0.3.3",
    
]

[dependency-groups]
checks = [
    "bandit>=1.8.0",
    "coverage>=7.6.10",
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.4",
]
commits = [
    "commitizen>=4.1.0",
    "pre-commit>=4.0.1",
]
dev = [
    "invoke>=2.2.0",
]
docs = [
    "pdoc>=15.0.1",
]
notebooks = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
]

# SCRIPTS

[project.scripts]
llmops-project = "llmops_project.scripts:main"

# CONFIGURATIONS

[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
strict = false
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pandera.mypy", "pydantic.mypy"]
no_implicit_optional= false

# Ignore specific error codes
disable_error_code = "no-untyped-call"

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]
filterwarnings = [
    "ignore:Pydantic V1 style `@validator` validators are deprecated:DeprecationWarning",
    "ignore:Pydantic V1 style `@root_validator` validators are deprecated:DeprecationWarning"
]


[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
